--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">hatakon</string>
     <string name="web_client_id">84382792906-okjp1gtb9pguhmejlv20l6k5itk57abl.apps.googleusercontent.com</string>
     <string name="take_care_of_the_security_of_your_devices">Take care of the security of your devices!</string>
+    <string name="log_in">You need to log in to continue using the app. Use your Google Account to do this</string>
 </resources>
