all device screen info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">hatakon</string>
+    <string name="app_name">CyberCare</string>
     <string name="web_client_id">84382792906-okjp1gtb9pguhmejlv20l6k5itk57abl.apps.googleusercontent.com</string>
     <string name="take_care_of_the_security_of_your_devices">Take care of the security of your devices!</string>
     <string name="log_in">You need to log in to continue using the app. Use your Google Account to do this</string>
@@ -8,4 +8,10 @@
     <string name="choose_device_brand">Choose device brand</string>
     <string name="select_device_brand">Select device brand</string>
     <string name="choose_type">Choose type\n</string>
+    <string name="select_device_type">Select device type</string>
+    <string name="choose_device_type">Choose device type</string>
+    <string name="analyzing_data">Analyzing data…</string>
+    <string name="check_complited_we_do_not_have_enough_information_about_the_device">Check complited: we do not have  enough information about  the device</string>
+    <string name="check_complited_your_device_is_secure">Check complited: Your device is secure</string>
+    <string name="check_complited_your_device_is_not_secure">Check complited: Your device is not secure</string>
 </resources>
